# radar_pi

./: .editorconfig  .gitignore  CMakeLists.txt  new_machine.sh  run_exe.sh
build-win32/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  radar-i18n.vcxproj  radar-i18n.vcxproj.filters  radar-po-update.vcxproj  radar-po-update.vcxproj.filters  radar-pot-update.vcxproj  radar-pot-update.vcxproj.filters  radar_pi.sln  radar_pi.vcxproj  radar_pi.vcxproj.filters
cmake/: PluginConfigure.cmake
exe-win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  radar-i18n.vcxproj  radar-i18n.vcxproj.filters  radar-po-update.vcxproj  radar-po-update.vcxproj.filters  radar-pot-update.vcxproj  radar-pot-update.vcxproj.filters  radar_pi.sln  radar_pi.vcxproj  radar_pi.vcxproj.filters
src/: GuardZone.cpp  Kalman.cpp  OptionsDialog.cpp  RadarCanvas.cpp  RadarCanvas.h  RadarControl.h  RadarDrawVertex.cpp  RadarInfo.cpp  RadarInfo.h  RadarMarpa.cpp  RadarMarpa.h  RadarPanel.cpp  RadarType.h  TrailBuffer.cpp  chart1.h  exemanager.cpp  ocpn_exe.h  ocpn_plugin.h  radar_exe.cpp  radar_exe.h  radar_main.cpp  radar_pi.cpp  radar_pi.h
src/emulator/: EmulatorControl.cpp  EmulatorControl.h
src/exe/: chart1.h  exemanager.cpp  pluginmanager.cpp  pluginmanager.h  radar_lib.h  radar_main.cpp
src/navico/: NavicoControl.cpp  NavicoControl.h  NavicoLocate.cpp  NavicoLocate.h  NavicoReceive.cpp  NavicoReceive.h
src/ocius/: .editorconfig  oc_lock.cpp  oc_lock.h  oc_radar_interface.cpp  oc_radar_interface.h  oc_utils.cpp  oc_utils.h
